load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cas",
    srcs = ["tree_directory_walker.go"],
    importpath = "github.com/buildbarn/bb-clientd/pkg/cas",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_buildbarn_bb_remote_execution//pkg/cas",
        "@com_github_buildbarn_bb_storage//pkg/digest",
    ],
)

go_test(
    name = "cas_test",
    srcs = ["tree_directory_walker_test.go"],
    deps = [
        ":cas",
        "//internal/mock",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/testutil",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
