load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cas",
    srcs = ["tree_directory_walker.go"],
    importpath = "github.com/buildbarn/bb-clientd/pkg/cas",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_buildbarn_bb_remote_execution//pkg/cas",
        "@com_github_buildbarn_bb_storage//pkg/digest",
    ],
)

go_test(
    name = "cas_test",
    srcs = ["tree_directory_walker_test.go"],
    deps = [
        ":cas",
        "//internal/mock",
        "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/testutil",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_uber_go_mock//gomock",
    ],
)
