load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "fuse",
    srcs = [
        "content_addressable_storage_directory.go",
        "digest_parsing_directory.go",
        "in_memory_output_path_factory.go",
        "instance_name_parsing_directory.go",
        "non_iterable_directory.go",
        "output_path_factory.go",
        "persistent_output_path_factory.go",
        "read_only_directory.go",
        "remote_output_service_directory.go",
        "static_directory.go",
    ],
    importpath = "github.com/buildbarn/bb-clientd/pkg/filesystem/fuse",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cas",
        "//pkg/outputpathpersistency",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_buildbarn_bb_remote_execution//pkg/filesystem",
        "@com_github_buildbarn_bb_remote_execution//pkg/filesystem/fuse",
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/outputpathpersistency",
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/remoteoutputservice",
        "@com_github_buildbarn_bb_storage//pkg/blobstore",
        "@com_github_buildbarn_bb_storage//pkg/clock",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/random",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_hanwen_go_fuse_v2//fuse",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "fuse_test",
    srcs = [
        "content_addressable_storage_directory_test.go",
        "digest_parsing_directory_test.go",
        "instance_name_parsing_directory_test.go",
        "persistent_output_path_factory_test.go",
        "remote_output_service_directory_test.go",
        "static_directory_test.go",
    ],
    embed = [":fuse"],
    deps = [
        "//internal/mock",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_buildbarn_bb_remote_execution//pkg/filesystem/fuse",
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/outputpathpersistency",
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/remoteoutputservice",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/testutil",
        "@com_github_golang_mock//gomock",
        "@com_github_hanwen_go_fuse_v2//fuse",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)
