load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "virtual",
    srcs = [
        "blob_access_command_file_factory.go",
        "command_file_factory.go",
        "content_addressable_storage_directory.go",
        "digest_parsing_directory.go",
        "handle_allocating_command_file_factory.go",
        "in_memory_output_path_factory.go",
        "instance_name_parsing_directory.go",
        "local_file_uploading_output_path_factory.go",
        "non_iterable_directory.go",
        "output_path_factory.go",
        "persistent_output_path_factory.go",
        "read_only_directory.go",
        "remote_output_service_directory.go",
        "static_directory.go",
    ],
    importpath = "github.com/buildbarn/bb-clientd/pkg/filesystem/virtual",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cas",
        "//pkg/outputpathpersistency",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_buildbarn_bb_remote_execution//pkg/blobstore",
        "@com_github_buildbarn_bb_remote_execution//pkg/builder",
        "@com_github_buildbarn_bb_remote_execution//pkg/filesystem",
        "@com_github_buildbarn_bb_remote_execution//pkg/filesystem/virtual",
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/outputpathpersistency",
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/remoteoutputservice",
        "@com_github_buildbarn_bb_storage//pkg/blobstore",
        "@com_github_buildbarn_bb_storage//pkg/clock",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_x_sync//semaphore",
    ],
)

go_test(
    name = "virtual_test",
    srcs = [
        "content_addressable_storage_directory_test.go",
        "digest_parsing_directory_test.go",
        "instance_name_parsing_directory_test.go",
        "local_file_uploading_output_path_factory_test.go",
        "persistent_output_path_factory_test.go",
        "remote_output_service_directory_test.go",
        "static_directory_test.go",
    ],
    deps = [
        ":virtual",
        "//internal/mock",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_buildbarn_bb_remote_execution//pkg/filesystem/virtual",
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/outputpathpersistency",
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/remoteoutputservice",
        "@com_github_buildbarn_bb_storage//pkg/blobstore",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/buffer",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/testutil",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_x_sync//semaphore",
    ],
)
