load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "bb_clientd_proto",
    srcs = ["bb_clientd.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/configuration/cas:cas_proto",
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/configuration/filesystem:filesystem_proto",
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/configuration/filesystem/virtual:virtual_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/blobstore:blobstore_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/builder:builder_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/global:global_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc:grpc_proto",
        "@com_google_protobuf//:duration_proto",
    ],
)

go_proto_library(
    name = "bb_clientd_go_proto",
    importpath = "github.com/buildbarn/bb-clientd/pkg/proto/configuration/bb_clientd",
    proto = ":bb_clientd_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/configuration/cas",
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/configuration/filesystem",
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/configuration/filesystem/virtual",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/blobstore",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/builder",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/global",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc",
    ],
)

go_library(
    name = "bb_clientd",
    embed = [":bb_clientd_go_proto"],
    importpath = "github.com/buildbarn/bb-clientd/pkg/proto/configuration/bb_clientd",
    visibility = ["//visibility:public"],
)
